hello-world-message/hello-world-ui-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: hello-world-message
  labels:
    app: hello-world-message
spec:
  containers:
  - image: "docker.io/bithavoc/hello-world-env"
    name: hello-world-message
    ports:
    - containerPort: 80
      protocol: TCP
