hello-world-message/hello-world-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-message
spec:
  selector:
    app: hello-world-message
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
